kubernetes/ingress/ingress-endpoints.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-ingress-endpoints
  namespace: java-microservices
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
    - http:
        paths:
          # 1️⃣ Microserviços / APIs - sem rewrite
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080

          # 2️⃣ Assets da Angular App
          - path: /assets/
            pathType: Prefix
            backend:
              service:
                name: angular-app-service
                port:
                  number: 80

          # 3️⃣ SPA fallback (qualquer rota que não seja API ou assets)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-app-service
                port:
                  number: 80
